--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>React Airbnb Skeleton</title>
-<link rel="shortcut icon" href="/awesome-react-airbnb-skeleton/favicon.ico"></head>
+    <link rel="shortcut icon" href="/awesome-react-airbnb-skeleton/favicon.ico">
+</head>
 
 <body>
     <div id="root"></div>
-<script type="text/javascript" src="/awesome-react-airbnb-skeleton/static/js/bundle.js"></script></body>
+    <script type="text/javascript" src="/awesome-react-airbnb-skeleton/static/js/bundle.js"></script>
+</body>
 
 </html>
